View Issue Details

IDProjectCategoryView StatusLast Update
0023120Open CASCADEOCCT:Visualizationpublic2013-04-29 15:21
ReportermpvAssigned Tosan 
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.3 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023120: Transform persistence is not restored
DescriptionMethod OpenGl_View::BeginTransformPersistence never restores previous myTransPers value on finishing of transformation applying (when "mode" is zero).

Now:
  if ( ATransPers->mode == 0 )
  {
    EndTransformPersistence();
    return TransPers_old;
  }

  myTransPers = ATransPers;

But must be:

  myTransPers = ATransPers;

  if ( ATransPers->mode == 0 )
  {
    EndTransformPersistence();
    return TransPers_old;
  }
Steps To ReproduceMethod OpenGl_View::Render on visualization in OCC view with AIS trihedron (located constantly in left bottom corner of the view) calls "AWorkspace->DisplayCallback (ACView, (aMode | OCC_PRE_OVERLAY));"
on the "step 6" with transformation matrix that was used during the trihedron visualization. This matrix was not restored to the neutral one.

DRAW script:

box b1 10 20 30
box b2 10 20 30
ttranslate b2 50 50 0
vinit
vdisplay b1
# This line breaks normal rendering
# of all subsequently displayed presentations
vsettransmode b1 32 0 0 0 0 0
# This box is drawn incorrectly due to the bug
vdisplay b2
vfit
vsetdispmode 1
vzoom 0.5
vpan 100 0
Additional information
and documentation updates
OpenGl_View::BeginTransformPersistence() method corrected to reset transform persistence parameters after a presentation with transform persistence enabled has been drawn. This ensures that other presentations are not affected by transform persistence logic.
TagsNo tags attached.
Test case numberchl 934 M0; bugs vis(004) bug23120

Attached Files

  • M0 (471 bytes)
  • M0.gif (2,496 bytes)
  • M0-products-20120518.gif (1,591 bytes)
  • M0-etalon.png (8,198 bytes)

Activities

san

2012-05-23 19:50

developer   ~0020571

Branch CR23120 is ready for reviewing.

kgv

2012-05-24 10:11

developer   ~0020576

Patch looks well. Please test it.

aan

2012-05-25 14:59

developer   ~0020590

Last edited: 2012-05-25 15:23

Dear BugMaster,
Workbench KAS:dev:mkv-23120-occt was created from git branch CR23120
(and mkv-23120-products from git master) and compiled on Linux and WNT platforms.

New test case for this fix is chl 934 M0. The snapshot M0.gif for this test is KO. M0-products-20120518.gif - snapshot of the test that created on products-20120518-opt. M0-etalon.gif - snapshot that should be as a reference.

There are not regressions in mkv-23120-products regarding to KAS:dev:products-20120512-opt
There are not improvements in mkv-23120-products regarding to KAS:dev:products-20120512-opt

See results in /QADisk/occttests/results/KAS/dev/mkv-23120-products_24052012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120512-opt_12052012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

aan

2012-05-25 14:59

developer  

M0 (471 bytes)

aan

2012-05-25 15:01

developer  

M0.gif (2,496 bytes)

aan

2012-05-25 15:16

developer  

M0-products-20120518.gif (1,591 bytes)

aan

2012-05-25 15:21

developer  

M0-etalon.png (8,198 bytes)

san

2012-06-19 10:52

developer   ~0020727

This problem requires additional debugging, the reason for transform persistence failure during offscreen scene dump is not clear.

aba

2012-11-14 11:17

developer   ~0022233

On current version of master problem of transform persistence failure in offscreen scene wasn't reproduced. Updated branch CR23120_1 has been created with old patch.
Please, test it again to find out if this problem is reproduced on current version.

san

2012-11-14 14:53

developer   ~0022237

Dear bugmaster,

Please, re-test branch CR23120_1, we need to know if test case chl 934 M0 still produces wrong result or not.

mkv

2012-11-16 13:12

tester   ~0022277

Last edited: 2012-11-16 13:14

Dear BugMaster,
Branch CR23120_1 (and master from occt GIT master) was compiled on Linux and Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
chl 934 M0 - OK.
bugs vis(004) bug23120 - OK.

abv

2012-11-24 18:42

manager   ~0022378

Test bugs vis bug23120 fails on IR-2012-11-23 (vc9 32-bit release on Win7 64-bit)

Related Changesets

occt: master e84189c5

2012-11-23 10:47:11

san

Details Diff
0023120: Transform persistence is not restored

Updating myTransPers field in any case in OpenGl_View::BeginTransformPersistence()
Test case for this bug
Affected Issues
0023120
mod - src/OpenGl/OpenGl_View.cxx Diff File
add - tests/bugs/vis/bug23120 Diff File

Issue History

Date Modified Username Field Change
2012-04-25 08:42 mpv New Issue
2012-04-25 08:42 mpv Assigned To => san
2012-04-25 09:20 san Target Version => 6.5.4
2012-05-23 19:11 san Status new => assigned
2012-05-23 19:44 san Steps to Reproduce Updated
2012-05-23 19:48 san Additional Information Updated
2012-05-23 19:50 san Note Added: 0020571
2012-05-23 19:50 san Assigned To san => kgv
2012-05-23 19:50 san Status assigned => resolved
2012-05-24 10:11 kgv Note Added: 0020576
2012-05-24 10:11 kgv Assigned To kgv => bugmaster
2012-05-24 10:11 kgv Status resolved => reviewed
2012-05-24 12:47 mkv Assigned To bugmaster => aan
2012-05-25 14:59 aan Note Added: 0020590
2012-05-25 14:59 aan File Added: M0
2012-05-25 15:00 aan Test case number => chl 934 M0
2012-05-25 15:01 aan File Added: M0.gif
2012-05-25 15:01 aan Note Edited: 0020590
2012-05-25 15:16 aan File Added: M0-products-20120518.gif
2012-05-25 15:17 aan Note Edited: 0020590
2012-05-25 15:21 aan File Added: M0-etalon.png
2012-05-25 15:23 aan Note Edited: 0020590
2012-05-25 15:24 aan Assigned To aan => san
2012-05-25 15:24 aan Status reviewed => assigned
2012-06-19 08:17 abv Status assigned => feedback
2012-06-19 10:52 san Note Added: 0020727
2012-06-19 10:52 san Status feedback => assigned
2012-10-23 18:41 abv Target Version 6.5.4 => 6.6.0
2012-10-26 14:54 san Assigned To san => aba
2012-11-14 11:17 aba Note Added: 0022233
2012-11-14 11:17 aba Assigned To aba => mpv
2012-11-14 11:17 aba Assigned To mpv => bugmaster
2012-11-14 14:52 san Status assigned => resolved
2012-11-14 14:53 san Note Added: 0022237
2012-11-14 14:53 san Status resolved => reviewed
2012-11-14 19:16 mkv Assigned To bugmaster => mkv
2012-11-16 13:12 mkv Note Added: 0022277
2012-11-16 13:13 mkv Test case number chl 934 M0 => chl 934 M0; bugs vis(004) bug23120
2012-11-16 13:13 mkv Assigned To mkv => bugmaster
2012-11-16 13:13 mkv Status reviewed => tested
2012-11-16 13:14 mkv Note Edited: 0022277
2012-11-24 18:42 abv Note Added: 0022378
2012-11-26 15:45 san Changeset attached => occt master e84189c5
2012-11-26 15:45 san Assigned To bugmaster => san
2012-11-26 15:45 san Status tested => verified
2012-11-26 15:45 san Resolution open => fixed
2012-12-10 17:16 san Changeset attached => occt master e84189c5
2013-04-23 13:36 aiv Status verified => closed
2013-04-29 15:21 aiv Fixed in Version => 6.6.0