0023120: Transform persistence is not restored

Updating myTransPers field in any case in OpenGl_View::BeginTransformPersistence()
Test case for this bug